--- a/common/common.scss
+++ b/common/common.scss
@@ -1,6 +1,3 @@
-.d-header {
-  border-bottom: 1px solid var(--surface-high-contrast);
-  box-shadow: none;
-  height: 72px;
-	background-color: rgba(0,0,0,0.8);
-}
+@import "common/foundation/colors.scss";
+@import "common/foundatin/header.scss";
+@import "common/foundation/variables.scss";
