--- a/common/common.scss
+++ b/common/common.scss
@@ -1,3 +1,3 @@
-@import "common/foundation/colors.scss";
-@import "common/foundation/header.scss";
-@import "common/foundation/variables.scss";
+@import "common/foundation/colors";
+@import "common/foundation/header";
+@import "common/foundation/variables";
