--- a/common/common.scss
+++ b/common/common.scss
@@ -1,3 +1,3 @@
-@import "common/foundation/colors";
-@import "common/foundation/header";
-@import "common/foundation/variables";
+@import "colors";
+@import "header";
+@import "variables";
