--- a/common/common.scss
+++ b/common/common.scss
@@ -3,3 +3,238 @@
 @import "colors";
 @import "header";
 @import "buttons";
+
+// Only applying to main topic lists over 768px wide
+@media screen and (min-width: 768px) {
+  .navigation-topics,
+  .categories-list,
+  .tags-page,
+  body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
+    #main-outlet {
+      &.wrap:before {
+        display: none;
+      }
+    }
+
+    // Structuring the main grid layout
+
+    #main-outlet > span:first-child {
+      grid-area: outlet;
+    }
+
+    .container:first-of-type {
+      grid-area: alerts;
+    }
+
+    .container:nth-of-type(2) {
+      grid-area: pins;
+    }
+
+    .list-controls {
+      grid-area: nav;
+    }
+
+    .list-container {
+      grid-area: topic-list;
+    }
+
+    .section-tag-info {
+      grid-column-end: 3;
+      grid-column-start: 1;
+    }
+
+    #navigation-bar {
+      margin-top: 1em;
+    }
+
+    #main-outlet {
+      display: grid;
+      grid-column-gap: 1.5em;
+
+      @if $sidebar-alignment == "left" {
+        grid-template-columns: 2fr 10fr; // 12 column grid
+        grid-template-areas:
+          "outlet outlet"
+          "alerts alerts"
+          "pins pins"
+          "nav topic-list";
+      } @else {
+        grid-template-columns: 10fr 2fr;
+        grid-template-areas:
+          "outlet outlet"
+          "alerts alerts"
+          "pins pins"
+          "topic-list nav";
+      }
+    }
+
+    // Changing the layout to fit the grid
+
+    .category-breadcrumb {
+      > li {
+        height: auto;
+      }
+      .select-kit-header {
+        margin: 0;
+      }
+      .badge-wrapper.bullet .badge-category-parent-bg,
+      .badge-wrapper.bullet .badge-category-bg {
+        width: 10px;
+        height: 10px;
+      }
+
+      .select-kit.combo-box.category-drop .select-kit-row .badge-wrapper.box {
+        font-weight: normal;
+        padding: 4px 6px;
+      }
+    }
+
+    .list-container {
+      min-width: 70%; // Don't let the topic list get too narrow
+      .topic-list,
+      .category-list {
+        th {
+          padding-top: 0; // Align to top of nav
+        }
+      }
+    }
+    .latest-topic-list .table-heading,
+    .top-topic-list .table-heading {
+      padding-top: 0;
+    }
+
+    .list-controls {
+      z-index: 100; // Above topic list content
+      .container {
+        position: -webkit-sticky; // required for Safari
+        position: sticky;
+        top: 5.8572em; // required for sticky
+      }
+
+      .btn {
+        margin: 0;
+        min-height: 35px;
+      }
+
+      #show-tag-info {
+        width: 100%;
+      }
+
+      .navigation-controls {
+        flex-wrap: wrap;
+        width: 100%;
+      }
+
+      #create-topic {
+        flex: 1 1 auto;
+        order: 6;
+        margin-top: 0.5em;
+      }
+
+      button {
+        order: 6;
+      }
+      .notifications-button {
+        order: 7;
+        margin-right: 0;
+        margin-top: 0.5em;
+      }
+
+      .edit-category {
+        flex: 1 1 auto;
+        width: 100%;
+        margin-top: 0.5em;
+      }
+
+      .categories-admin-dropdown {
+        order: 8;
+        margin-bottom: 0;
+        margin-left: 0.5em;
+        margin-top: 0.5em;
+        button {
+          height: 2em;
+        }
+      }
+
+      .nav-pills {
+        display: flex;
+        flex: 1 1 100%;
+        flex-direction: column;
+        margin: 0.5em 0;
+        li {
+          margin: 0;
+          &:empty {
+            display: none;
+          }
+        }
+        & > li > a {
+          width: 100%;
+          padding: 0.5em 0.714em;
+        }
+        @if $sidebar-alignment == left {
+          & > li.active > a {
+            &:after {
+              opacity: 0.75;
+              content: svg-uri(
+                '<svg width="15px" height="15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="white" d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"></path></svg>'
+              );
+              display: inline;
+              margin-left: 5px;
+            }
+          }
+        }
+      }
+      .select-kit-header {
+        span.category-name {
+          max-width: 8.5em;
+        }
+      }
+
+      .category-navigation,
+      .navigation-container {
+        display: flex;
+        flex-wrap: wrap;
+      }
+      ol {
+        display: flex;
+        flex-wrap: wrap;
+        flex: 1 1 auto;
+        margin: 0;
+        li.category-drop,
+        li.tag-drop {
+          margin: 0;
+          flex: 1 1 100%;
+          &:not(:first-of-type) {
+            margin: 0.5em 0 0 0;
+          }
+        }
+      }
+
+      .select-kit .select-kit-header .caret-icon {
+        &:before {
+          opacity: 0.75;
+          content: svg-uri(
+            '<svg width="15px" height="15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"></path></svg>'
+          );
+        }
+      }
+    }
+  }
+
+  .tags-page.staff {
+    .list-controls {
+      .admin-tag {
+        order: 9;
+        flex: 1 1 auto;
+        margin-top: 0.5em;
+        &.btn-danger {
+          margin-left: 0.5em;
+        }
+      }
+    }
+  }
+
+  .category-breadcrumb > li {
+    height: auto;
+  }
+}
